--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: [1.19.x] #[1.16.x, 1.17.x, 1.19.x]
-        os: [ubuntu-latest] #[ubuntu-latest, windows-latest, macos-latest]
+        go-version: [1.16.x, 1.17.x, 1.19.x]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Go
