--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,7 @@ jobs:
 
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3
+      with:
+        args: --timeout=3m
 
     
